--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,12 @@
 :root {
 	--first-text-color: black;
 	--primary-color: #23A6F0;
-	--secondary-color: #23856D;
+	--secondary-color: #252B42;
 	--second-text-color: #737373;
 	--text-color: #252B42;
+	--blue-cards-background: rgba(45, 139, 192, 0.75);
+	--light-text-color: #FFF;
+	--blue-text-color: #2A7CC7;
 }
 
 * {
@@ -58,7 +61,7 @@ nav {
 	gap: 1.5rem;
 	margin-left: 8.3rem;
 	height: 100%;
-	width: 76.7rem;
+	width: 82rem;
 	position: relative;
 }
 
@@ -140,11 +143,13 @@ nav {
 	padding-right: 225px;
 }
 
+.promocao {
+	width: 53.2rem;
+}
+
 .socials {
 	display: flex;
 	flex-direction: row;
-	padding-left: 21.625%;
-
 }
 
 .social-icons {
@@ -212,27 +217,201 @@ nav {
 	color: var(--secondary-color);
 }
 
-.categories {
-	display: flex;
-	flex-direction: column;
+.bests {
+	display: grid;
 	align-items: center;
-	margin-top: 8rem;
+	justify-content: center;
+	grid-template-columns: 66.1rem 55.7rem;
+	grid-template-rows: 27.8rem 27.8rem;
+	gap: 1.6rem;
+	padding: 8rem 0;
 }
 
-.title-section {
-	font-size: 24px;
-	font-weight: 700;
-	font-style: normal;
+.cards {
+	position: relative;
 }
-.description{
+
+.card2,
+.card3 {
+	width: 55.7rem;
+	height: 27.8rem;
+}
+
+.card2-description,
+.card3-description {
+	display: inline-flex;
+	padding: 40px 51px 29px 36px;
+	flex-direction: column;
+	justify-content: flex-end;
+	align-items: flex-start;
+	gap: 22px;
+}
+
+.cards-description {
+	position: absolute;
+	background: var(--blue-cards-background);
+	display: inline-flex;
+	flex-direction: column;
+	justify-content: flex-end;
+	align-items: flex-start;
+	bottom: 0;
+	left: 0;
+}
+
+.more-btn {
+	display: flex;
+	padding: 15px 30px;
+	flex-direction: column;
+	align-items: center;
+	border-radius: 5px;
+	border: 1px solid var(--light-text-color);
 	font-size: 14px;
 	font-style: normal;
-	font-weight: 400;
-	color:var(--second-text-color);
-	margin: 10px 0 48px 0;
+	font-weight: 700;
+	line-height: 22px;
+	letter-spacing: 0.2px;
+	color: var(--light-text-color);
+	width: 19.8rem;
+	height: 5.2rem;
+	background: transparent;
 }
-.grid-categories{
- display: grid;
- gap:3.1rem;
- 
+
+.more-btn:hover {
+	background: white;
+	color: black;
+}
+
+.card1-description {
+	padding: 60px 155.5px 42px 66px;
+	gap: 2rem;
+	width: 42rem;
+	height: 23.8rem;
+
+}
+
+.card1-title {
+	font-size: 24px;
+	font-style: normal;
+	font-weight: 700;
+	line-height: 32px;
+	letter-spacing: 0.1px;
+	color: var(--light-text-color);
+}
+
+.cards-title {
+	font-size: 20px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: 30px;
+	letter-spacing: 0.2px;
+	color: var(--light-text-color);
+}
+
+.card1 {
+	width: 66.1rem;
+	height: 57.2rem;
+	background: url(./assets/images/unsplash_Bd7gNnWJBkU.jpg) center/cover no-repeat;
+	grid-column: 1;
+	grid-row: span 2;
+}
+
+.card2 {
+	grid-column: 2;
+	grid-row: 1;
+	background: url(./assets/images/unsplash_muOHbrFGEQY.jpg) center/cover no-repeat;
+}
+
+.card3 {
+	grid-row: 2;
+	grid-column: 2;
+	background: url(./assets/images/unsplash_MKvjc2kar7Q.jpg) center/cover no-repeat;
+}
+
+.shop-media {
+	display: flex;
+	padding: 5rem 19.5rem;
+	justify-content: space-between;
+	align-items: center;
+	gap: 3rem;
+	width: 100%;
+}
+
+.initial {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.collection {
+	position: relative;
+	z-index: 1;
+	display: flex;
+	width: 1292px;
+	padding: 0 0 0 151px;
+	justify-content: flex-start;
+	align-items: center;
+	flex-shrink: 0;
+	background: #96E9FB;
+	border-radius: 20px;
+}
+
+.collection-text {
+
+	display: flex;
+	width: 548px;
+	flex-direction: column;
+	justify-content: center;
+	align-items: flex-start;
+	gap: 30px;
+	flex-shrink: 0;
+}
+
+.collection-date {
+	font-size: 16px;
+	font-style: normal;
+	font-weight: 700;
+	line-height: 150%;
+	letter-spacing: 0.1px;
+	color: var(--primary-color);
+}
+
+.collection-title {
+	font-size: 58px;
+	font-style: normal;
+	font-weight: 700;
+	line-height: 137.931%;
+	letter-spacing: 0.2px;
+}
+
+.collection-description {
+	font-size: 20px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: 150%;
+	letter-spacing: 0.2px;
+	color: var(--second-text-color);
+}
+
+.shop-collection-btn {
+	display: flex;
+	padding: 15px 40px;
+	flex-direction: column;
+	align-items: center;
+	gap: 10px;
+	font-size: 24px;
+	font-style: normal;
+	font-weight: 700;
+	line-height: 133.333%;
+	letter-spacing: 0.1px;
+	color: white;
+	background: var(--primary-color);
+	border: none;
+	border-radius: 5px;
+}
+
+.collection-image {
+	position: relative;
+	margin-left: -50px;
+	z-index: 2;
 }
