--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@
 	--blue-cards-background: rgba(45, 139, 192, 0.75);
 	--light-text-color: #FFF;
 	--blue-text-color: #2A7CC7;
+	--footer-text-color: #dbdbdb;
 }
 
 * {
@@ -16,10 +17,24 @@
 	margin: 0;
 	padding: 0;
 	font-family: 'Montserrat', sans-serif;
+	text-decoration: none;
+	color: inherit;
+
+}
+
+button,
+a {
+	cursor: pointer;
+
 }
 
 html {
 	font-size: 62.5%;
+	width: 100%;
+}
+
+html {
+	width: 100%;
 }
 
 header {
@@ -224,7 +239,8 @@ nav {
 	grid-template-columns: 66.1rem 55.7rem;
 	grid-template-rows: 27.8rem 27.8rem;
 	gap: 1.6rem;
-	padding: 8rem 0;
+	padding-bottom: 8rem;
+
 }
 
 .cards {
@@ -329,7 +345,7 @@ nav {
 
 .shop-media {
 	display: flex;
-	padding: 5rem 19.5rem;
+	padding: 8rem 19.5rem;
 	justify-content: space-between;
 	align-items: center;
 	gap: 3rem;
@@ -339,16 +355,18 @@ nav {
 .initial {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: flex-start;
 	align-items: center;
+	position: relative;
+	z-index: 0;
 }
 
 .collection {
-	position: relative;
 	z-index: 1;
 	display: flex;
-	width: 1292px;
-	padding: 0 0 0 151px;
+	width: 89.72%;
+	height: 391.25px;
+	padding-left: 12.6rem;
 	justify-content: flex-start;
 	align-items: center;
 	flex-shrink: 0;
@@ -359,11 +377,11 @@ nav {
 .collection-text {
 
 	display: flex;
-	width: 548px;
+	width: 56.8rem;
 	flex-direction: column;
 	justify-content: center;
 	align-items: flex-start;
-	gap: 30px;
+	gap: 3rem;
 	flex-shrink: 0;
 }
 
@@ -410,8 +428,106 @@ nav {
 	border-radius: 5px;
 }
 
-.collection-image {
-	position: relative;
-	margin-left: -50px;
+.collection-images-container {
+	position: absolute;
+	width: 98%;
 	z-index: 2;
+	top: 390px;
+}
+
+.collection-image-woman {
+	width: 49.4rem;
+	height: 43.9rem;
+	position: absolute;
+	z-index: 3;
+	bottom: 0;
+	right: 0;
+}
+
+.circles-container {
+	position: absolute;
+	width: 100%;
+}
+
+.circles {
+	position: absolute;
+}
+
+.circle1 {
+	width: ;
+	height: ;
+	border-radius: 50%;
+	color: white;
+}
+
+footer {
+	display: flex;
+	flex-direction: row;
+	width: 100%;
+	background: var(--secondary-color);
+	align-items: center;
+	justify-content: space-between;
+	padding: 8rem 19.5rem;
+
+}
+
+.footer-containers {
+
+	color: var(--footer-text-color);
+	font-size: 1.4rem;
+	font-style: normal;
+	font-weight: 400;
+	line-height: 20px;
+	letter-spacing: 0.2px;
+
+}
+
+.footer-titles {
+	color: white;
+	font-size: 2.4rem;
+	font-style: normal;
+	font-weight: 700;
+	line-height: 32px;
+	letter-spacing: 0.1px;
+}
+
+.socials {
+	width: 11.2rem;
+	justify-content: space-around;
+	margin-left: -17px;
+}
+
+footer ul {
+	list-style: none;
+}
+
+.footer-container-left {
+	gap: 2.5rem;
+	display: flex;
+	flex-direction: column;
+}
+
+.footer-container-center ul,
+.footer-container-right ul {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+	margin-top: 2rem;
+}
+
+.collection-images-container {
+	position: relative;
+}
+
+.circles {
+	position: absolute;
+	top: -500px;
+	border-radius: 500px;
+	z-index: 2;
+	background: white;
+}
+
+.circle1 {
+	width: 30rem;
+	height: 30rem;
 }
