--- a/styles.css
+++ b/styles.css
@@ -73,10 +73,9 @@ nav {
 	flex-direction: row;
 	align-items: center;
 	justify-content: flex-start;
-	gap: 1.5rem;
+	gap: 1.5rem; 
 	margin-left: 8.3rem;
 	height: 100%;
-	width: 69.3%;
 	position: relative;
 }
 
@@ -116,10 +115,11 @@ nav {
 .login-chart {
 	display: flex;
 	flex-direction: row;
-	justify-content: flex-start;
+	justify-content: flex-end;
 	align-items: center;
 	gap: 3rem;
 	height: 100%;
+	width:100%
 }
 
 .login-chart a {
@@ -158,22 +158,16 @@ nav {
 	padding-right: 225px;
 }
 
-.promotion {
-	width: 55%;
-}
 
 .socials {
 	display: flex;
 	flex-direction: row;
+	width:100%;
+	justify-content: flex-end;
 }
 
-.instagram-icon:hover {
-	background-image: linear-gradient(135deg, #8134AF, #F58529);
-
-}
-
-.youtube-icon:hover path {
-	fill: (#FF0000);
+.social-icons:hover{
+	transform: scale(1.2);
 }
 
 .social-icons {
@@ -386,9 +380,8 @@ nav {
 }
 
 .collection-text {
-
 	display: flex;
-	width: 56.8rem;
+	width: 45%;
 	flex-direction: column;
 	justify-content: center;
 	align-items: flex-start;
@@ -397,7 +390,7 @@ nav {
 }
 
 .collection-date {
-	font-size: 16px;
+	font-size: 1.4rem;
 	font-style: normal;
 	font-weight: 700;
 	line-height: 150%;
@@ -406,7 +399,7 @@ nav {
 }
 
 .collection-title {
-	font-size: 58px;
+	font-size: 4.8rem;
 	font-style: normal;
 	font-weight: 700;
 	line-height: 137.931%;
@@ -414,7 +407,7 @@ nav {
 }
 
 .collection-description {
-	font-size: 20px;
+	font-size: 1.4rem;
 	font-style: normal;
 	font-weight: 400;
 	line-height: 150%;
@@ -428,7 +421,7 @@ nav {
 	flex-direction: column;
 	align-items: center;
 	gap: 10px;
-	font-size: 24px;
+	font-size: 2rem;
 	font-style: normal;
 	font-weight: 700;
 	line-height: 133.333%;
@@ -440,68 +433,60 @@ nav {
 }
 
 .collection-images-container {
-	position: absolute;
-	width: 98%;
+	width: 55%;
 	z-index: 2;
-	top: 390px;
+	height: 100%;
 }
 
 .collection-image-woman {
-	display: none;
-	width: 49.4rem;
-	height: 43.9rem;
+	display: flex;
 	position: absolute;
-	z-index: 3;
-	bottom: 0;
-	right: 0;
-}
-
-.circles-container {
-	position: absolute;
-	width: 100%;
+	width:450px;
+	right: -50px;
 }
 
 .circles {
-	position: absolute;
-	top: -500px;
 	border-radius: 50%;
-	z-index: 2;
+	position: relative;
+}
+
+ul {
+	list-style: none;
 }
 
 .circle1 {
-	
 	background: white;
-	margin-top: -12%;
-	left: 65%; 
+	top: -2%;
+	left: 310px;
 	width: 30rem;
-	height: 30rem; 
+	height: 30rem;
 
 }
 
 .circle2 {
-	
 	background: white;
-	width: 40px;
-	height: 40px;
-	margin-top: -11%;
-	left: 60%; 
+	width: 4rem;
+	height: 4rem;
+	bottom:76.5%;
+	left: 45%;
 }
 
 .circle3 {
-	
 	background-color: #977DF4;
 	width: 15px;
 	height: 15px;
-	margin-top: 25%;  
-	left: 61.5%;  
+	bottom:40%;
+	left: 45.5%;
 }
-.circle4{
+
+.circle4 {
 	background-color: #977DF4;
 	width: 15px;
 	height: 15px;
-	margin-top:-4%;
-	left: 105%;     
+	bottom:80%;
+	left: 105%; 
 }
+
 footer {
 	display: flex;
 	flex-direction: row;
@@ -532,7 +517,7 @@ footer {
 	letter-spacing: 0.1px;
 }
 
-.socials {
+.socials-footer {
 	width: 11.2rem;
 	justify-content: space-around;
 	margin-left: -17px;
@@ -560,8 +545,4 @@ footer ul {
 	position: relative;
 }
 
-.circles {
-	
-	
-}
-
+.circles {}
